# tasks

./: README.md
backend/: .env.example  README.md  pyproject.toml  seed.py
backend/app/: config.py  crud.py  db.py  endpoints.py  main.py  models.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: auth.py  tasks.py
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: AuthModal.tsx  CreateItemModal.tsx  FilterBar.tsx  InfiniteList.tsx  ItemCard.tsx
frontend/src/hooks/: useItems.ts
scripts/: run.bat  run.sh  seed.bat  seed.sh  setup.bat  setup.sh
