[project]
name = "tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "scalar-fastapi>=1.6.1",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.40.0",
    "pyjwt>=2.10.1",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "pydantic-settings>=2.12.0",
    "sqlalchemy-libsql>=0.2.0",
]
