[project]
name = "tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.1.2",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "scalar-fastapi>=1.6.1",
    "sqlmodel>=0.0.31",
    "uvicorn[standard]>=0.40.0",
]
